Add adaptive launcher icon, extract testable game math, add unit tests